// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdk-constructs BundledLambda with minimal configuration builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "id_my-function-log-permissions_8C1AFB0E": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.id_id-logs_E7E8A5B1.arn}"
            ]
          }
        ]
      },
      "id_my-function-role_my-function-role-assume_3B36031C": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "id_my-function-role-partition_C7AF5BB8": {
      }
    },
    "aws_region": {
      "id-region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "id_id-logs_E7E8A5B1": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "id_id-alarm_EB9777B2": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.id-region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "id_my-function-role_my-function-role-new-role_2EB66BDC": {
        "assume_role_policy": "\${data.aws_iam_policy_document.id_my-function-role_my-function-role-assume_3B36031C.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "id_my-function-log-policy_EDED9500": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.id_my-function-log-permissions_8C1AFB0E.json}",
        "role": "\${aws_iam_role.id_my-function-role_my-function-role-new-role_2EB66BDC.arn}"
      }
    },
    "aws_lambda_function": {
      "id_6B6273EC": {
        "depends_on": [
          "aws_cloudwatch_log_group.id_id-logs_E7E8A5B1"
        ],
        "function_name": "my-function",
        "handler": "index.handler",
        "memory_size": 128,
        "role": "\${aws_iam_role.id_my-function-role_my-function-role-new-role_2EB66BDC.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "my-bucket",
        "s3_key": "some/key.zip",
        "timeout": 300
      }
    }
  }
}"
`;

exports[`cdk-constructs DockerLambda with maximal configuration builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "id_my-function-log-permissions_8C1AFB0E": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.id_id-logs_E7E8A5B1.arn}"
            ]
          }
        ]
      }
    },
    "aws_iam_role": {
      "id_my-function-role_my-function-role-external-role_6B2F9127": {
        "name": "role-name"
      }
    },
    "aws_region": {
      "id-region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "id_id-logs_E7E8A5B1": {
        "kms_key_id": "arn:aws:service:us-west-2:123456789012:entity",
        "name": "/aws/lambda/my-function",
        "retention_in_days": 7,
        "skip_destroy": false,
        "tags": {
          "tag": "value"
        }
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "id_id-alarm_EB9777B2": {
        "actions_enabled": true,
        "alarm_actions": [
          "arn:aws:service:us-west-2:123456789012:entity"
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.id-region.name}",
        "comparison_operator": "GreaterThanOrEqualToThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 2,
        "insufficient_data_actions": [
          "arn:aws:service:us-west-2:123456789012:entity"
        ],
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "ok_actions": [
          "arn:aws:service:us-west-2:123456789012:entity"
        ],
        "period": 120,
        "statistic": "Average",
        "tags": {
          "tag": "value"
        },
        "threshold": 10,
        "treat_missing_data": "missing"
      }
    },
    "aws_iam_role_policy": {
      "id_my-function-log-policy_EDED9500": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.id_my-function-log-permissions_8C1AFB0E.json}",
        "role": "\${data.aws_iam_role.id_my-function-role_my-function-role-external-role_6B2F9127.arn}"
      },
      "id_my-function-role_my-function-role-user-policy_13826409": {
        "name": "user-permissions-my-function-role",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"s3:*\\",\\"Resource\\":\\"arn:aws:service:us-west-2:123456789012:entity\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${data.aws_iam_role.id_my-function-role_my-function-role-external-role_6B2F9127.arn}"
      }
    },
    "aws_lambda_function": {
      "id_6B6273EC": {
        "architectures": [
          "x86_64"
        ],
        "code_signing_config_arn": "arn:aws:service:us-west-2:123456789012:entity",
        "dead_letter_config": {
          "target_arn": "arn:aws:service:us-west-2:123456789012:entity"
        },
        "depends_on": [
          "aws_cloudwatch_log_group.id_id-logs_E7E8A5B1"
        ],
        "description": "described",
        "environment": {
          "variables": {
            "KEY": "value"
          }
        },
        "ephemeral_storage": {
          "size": 512
        },
        "file_system_config": {
          "arn": "arn:aws:service:us-west-2:123456789012:entity",
          "local_mount_path": "/mnt/something"
        },
        "function_name": "my-function",
        "image_config": {
          "command": [
            "foo"
          ],
          "entry_point": [
            "bar"
          ],
          "working_directory": "baz"
        },
        "image_uri": "public.ecr.aws/lambda/provided:al2",
        "kms_key_arn": "arn:aws:service:us-west-2:123456789012:entity",
        "layers": [
          "arn:aws:service:us-west-2:123456789012:entity"
        ],
        "memory_size": 512,
        "package_type": "Image",
        "publish": false,
        "replace_security_groups_on_destroy": false,
        "replacement_security_group_ids": [
          "sg-7ca1556d"
        ],
        "reserved_concurrent_executions": -1,
        "role": "\${data.aws_iam_role.id_my-function-role_my-function-role-external-role_6B2F9127.arn}",
        "skip_destroy": false,
        "tags": {
          "tag": "value"
        },
        "timeout": 3,
        "tracing_config": {
          "mode": "Active"
        }
      }
    }
  }
}"
`;

exports[`cdk-constructs DockerLambda with minimal configuration builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "id_my-function-log-permissions_8C1AFB0E": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.id_id-logs_E7E8A5B1.arn}"
            ]
          }
        ]
      },
      "id_my-function-role_my-function-role-assume_3B36031C": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "id_my-function-role-partition_C7AF5BB8": {
      }
    },
    "aws_region": {
      "id-region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "id_id-logs_E7E8A5B1": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "id_id-alarm_EB9777B2": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.id-region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "id_my-function-role_my-function-role-new-role_2EB66BDC": {
        "assume_role_policy": "\${data.aws_iam_policy_document.id_my-function-role_my-function-role-assume_3B36031C.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "id_my-function-log-policy_EDED9500": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.id_my-function-log-permissions_8C1AFB0E.json}",
        "role": "\${aws_iam_role.id_my-function-role_my-function-role-new-role_2EB66BDC.arn}"
      }
    },
    "aws_lambda_function": {
      "id_6B6273EC": {
        "depends_on": [
          "aws_cloudwatch_log_group.id_id-logs_E7E8A5B1"
        ],
        "function_name": "my-function",
        "image_uri": "public.ecr.aws/lambda/provided:al2",
        "memory_size": 128,
        "package_type": "Image",
        "role": "\${aws_iam_role.id_my-function-role_my-function-role-new-role_2EB66BDC.arn}",
        "timeout": 300
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda inVPC method builds in looked up VPC 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_my-function-log-permissions_1D3E84D7": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22.arn}"
            ]
          }
        ]
      },
      "my-function_my-function-role_my-function-role-assume_4F65D8FD": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_my-function-role-partition_7C5CD2BD": {
      }
    },
    "aws_region": {
      "my-function-region": {
      }
    },
    "aws_security_groups": {
      "my-function_my-function-sg_66D775D9": {
        "filter": [
          {
            "name": "vpc-id",
            "values": [
              "vpc-6905200c"
            ]
          }
        ]
      }
    },
    "aws_subnet_ids": {
      "my-function_my-function-subnets_B14C0666": {
        "vpc_id": "vpc-6905200c"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_my-function-logs_A4870A22": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_my-function-alarm_EF5A6BA3": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.my-function-region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_my-function-role_my-function-role-new-role_EF570E59": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_my-function-role_my-function-role-assume_4F65D8FD.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_my-function-log-policy_78428521": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_my-function-log-permissions_1D3E84D7.json}",
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_0A1E7AB6": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}",
        "timeout": 300,
        "vpc_config": {
          "security_group_ids": "\${data.aws_security_groups.my-function_my-function-sg_66D775D9.ids}",
          "subnet_ids": "\${tolist(data.aws_subnet_ids.my-function_my-function-subnets_B14C0666.ids)}"
        }
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda inVPC method builds in specific subnets 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_my-function-log-permissions_1D3E84D7": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22.arn}"
            ]
          }
        ]
      },
      "my-function_my-function-role_my-function-role-assume_4F65D8FD": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_my-function-role-partition_7C5CD2BD": {
      }
    },
    "aws_region": {
      "my-function-region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_my-function-logs_A4870A22": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_my-function-alarm_EF5A6BA3": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.my-function-region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_my-function-role_my-function-role-new-role_EF570E59": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_my-function-role_my-function-role-assume_4F65D8FD.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_my-function-log-policy_78428521": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_my-function-log-permissions_1D3E84D7.json}",
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_0A1E7AB6": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}",
        "timeout": 300,
        "vpc_config": {
          "security_group_ids": [
            "sg-7ca1556d"
          ],
          "subnet_ids": [
            "subnet-362d0717"
          ]
        }
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda inVPC method builds on default VPC 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_my-function-log-permissions_1D3E84D7": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22.arn}"
            ]
          }
        ]
      },
      "my-function_my-function-role_my-function-role-assume_4F65D8FD": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_my-function-role-partition_7C5CD2BD": {
      }
    },
    "aws_region": {
      "my-function-region": {
      }
    },
    "aws_security_groups": {
      "my-function_my-function-sg_66D775D9": {
        "filter": [
          {
            "name": "vpc-id",
            "values": [
              "\${data.aws_vpc.my-function_my-function-vpc_C1A3EA49.id}"
            ]
          }
        ]
      }
    },
    "aws_subnet_ids": {
      "my-function_my-function-subnets_B14C0666": {
        "vpc_id": "\${data.aws_vpc.my-function_my-function-vpc_C1A3EA49.id}"
      }
    },
    "aws_vpc": {
      "my-function_my-function-vpc_C1A3EA49": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_my-function-logs_A4870A22": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_my-function-alarm_EF5A6BA3": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.my-function-region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_my-function-role_my-function-role-new-role_EF570E59": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_my-function-role_my-function-role-assume_4F65D8FD.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_my-function-log-policy_78428521": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_my-function-log-permissions_1D3E84D7.json}",
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_0A1E7AB6": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}",
        "timeout": 300,
        "vpc_config": {
          "security_group_ids": "\${data.aws_security_groups.my-function_my-function-sg_66D775D9.ids}",
          "subnet_ids": "\${tolist(data.aws_subnet_ids.my-function_my-function-subnets_B14C0666.ids)}"
        }
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda with bare minimal required configuration builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_my-function-log-permissions_1D3E84D7": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22.arn}"
            ]
          }
        ]
      },
      "my-function_my-function-role_my-function-role-assume_4F65D8FD": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_my-function-role-partition_7C5CD2BD": {
      }
    },
    "aws_region": {
      "my-function-region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_my-function-logs_A4870A22": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_my-function-alarm_EF5A6BA3": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.my-function-region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_my-function-role_my-function-role-new-role_EF570E59": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_my-function-role_my-function-role-assume_4F65D8FD.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_my-function-log-policy_78428521": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_my-function-log-permissions_1D3E84D7.json}",
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_0A1E7AB6": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}",
        "timeout": 300
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda with s3 package specified builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_my-function-log-permissions_1D3E84D7": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22.arn}"
            ]
          }
        ]
      },
      "my-function_my-function-role_my-function-role-assume_4F65D8FD": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_my-function-role-partition_7C5CD2BD": {
      }
    },
    "aws_region": {
      "my-function-region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_my-function-logs_A4870A22": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_my-function-alarm_EF5A6BA3": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.my-function-region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_my-function-role_my-function-role-new-role_EF570E59": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_my-function-role_my-function-role-assume_4F65D8FD.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_my-function-log-policy_78428521": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_my-function-log-permissions_1D3E84D7.json}",
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_0A1E7AB6": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_my-function-logs_A4870A22"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_my-function-role_my-function-role-new-role_EF570E59.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "my-bucket",
        "s3_key": "key/something.zip",
        "timeout": 300
      }
    }
  }
}"
`;

exports[`cdk-constructs Repository with minimal configuration allowing lambda access builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-role_my-role-doc_8CB0B572": {
        "statement": [
          {
            "actions": [
              "ecr:BatchGetImage",
              "ecr:GetDownloadUrlForLayer"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_ecr_repository": {
      "my-role_FA4855CE": {
        "name": "my-repo"
      }
    },
    "aws_ecr_repository_policy": {
      "my-role_my-role-policy_516BBFB1": {
        "policy": "\${data.aws_iam_policy_document.my-role_my-role-doc_8CB0B572.json}",
        "repository": "\${aws_ecr_repository.my-role_FA4855CE.name}"
      }
    }
  }
}"
`;

exports[`cdk-constructs Role with minimal configuration a new role builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-role_my-role-assume_AC40947D": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:aws:iam::1234567890:user/chuck"
                ],
                "type": "AWS"
              }
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_iam_role": {
      "my-role_my-role-new-role_137CD40C": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-role_my-role-assume_AC40947D.json}",
        "name": "new-role"
      }
    }
  }
}"
`;

exports[`cdk-constructs Role with minimal configuration an existing role builds 1`] = `
"{
  "data": {
    "aws_iam_role": {
      "my-role_my-role-external-role_747D99F6": {
        "name": "developer"
      }
    }
  }
}"
`;

exports[`cdk-constructs Role with policy statements a new role builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-role_my-role-assume_AC40947D": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:aws:iam::1234567890:user/chuck"
                ],
                "type": "AWS"
              }
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_iam_role": {
      "my-role_my-role-new-role_137CD40C": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-role_my-role-assume_AC40947D.json}",
        "name": "new-role"
      }
    },
    "aws_iam_role_policy": {
      "my-role_my-role-user-policy_0B5BF5C7": {
        "name": "user-permissions-my-role",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"s3:*\\",\\"Resource\\":\\"arn:aws:service:us-west-2:123456789012:entity\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.my-role_my-role-new-role_137CD40C.arn}"
      }
    }
  }
}"
`;

exports[`cdk-constructs Role with policy statements an existing role builds 1`] = `
"{
  "data": {
    "aws_iam_role": {
      "my-role_my-role-external-role_747D99F6": {
        "name": "developer"
      }
    }
  },
  "resource": {
    "aws_iam_role_policy": {
      "my-role_my-role-user-policy_0B5BF5C7": {
        "name": "user-permissions-my-role",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"s3:*\\",\\"Resource\\":\\"arn:aws:service:us-west-2:123456789012:entity\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${data.aws_iam_role.my-role_my-role-external-role_747D99F6.arn}"
      }
    }
  }
}"
`;
